--- a/CryptogramEncryptor/templates/index.html
+++ b/CryptogramEncryptor/templates/index.html
@@ -44,6 +44,15 @@
             </div>
 
             <div class="form-group">
+                <label>Choose Algorithm:</label>
+                <select name="algorithm" id="algorithm" required>
+                    <option value="AES">AES (Advanced Encryption Standard)</option>
+                    <option value="DES">DES (Data Encryption Standard)</option>
+                    <option value="RSA">RSA (Rivest-Shamir-Adleman)</option>
+                </select>
+            </div>
+
+            <div class="form-group">
                 <label for="file">Upload File:</label>
                 <input type="file" id="file" name="file" required>
             </div>
